# chenjie-openstack

./: .gitignore
chenjie_nova/: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  chenjienova  requirements.txt  setup.cfg  setup.py
chenjie_nova/chenjie_nova/cmd/: __init__.py  api.py
chenjie_nova/chenjie_nova/pasteDeployTest1/: pasteDeploy1.py
chenjie_nova/chenjie_nova/pasteDeployTest2/: middleware.py
chenjie_nova/chenjie_nova/restserver/: api-paste.ini  controllers.py  middleware.py  restclient.py  router.py  service.py  wsgi.py
chenjie_nova/doc/source/: index.rst  usage.rst
chenjie_novaclient/: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg
chenjie_novaclient/chenjie_novaclient/: __init__.py
chenjie_novaclient/chenjie_novaclient/cmd/: __init__.py  api.py
chenjie_novaclient/chenjie_novaclient/restclient/: client.py  keystoneclient.py  novaclient.py
chenjie_novaclient/chenjie_novaclient/tests/: test_chenjie_novaclient.py
chenjie_novaclient/doc/source/: conf.py  index.rst  installation.rst  usage.rst
chenjie_test/chenjie_nova/cmd/: api.py
chenjie_test/chenjie_nova/pasteDeployTest1/: api-paste.ini
chenjie_test/chenjie_nova/pasteDeployTest2/: api-paste.ini  middleware.py  pasteDeploy2.py
chenjie_test/chenjie_nova/routerTest/: api-paste.ini  controllers.py  middleware.py  routerTest.py
chenjie_test/chenjie_nova/serverTest/: routerTest.py  service.py  wsgi.py
chenjie_test/chenjie_nova/tests/: test_chenjie_nova.py
chenjie_test/doc/source/: conf.py  installation.rst
