[metadata]
name = chenjie_nova
summary = "Small version of nova by cchenjiie"
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    chenjie_nova

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = chenjie_nova/locale
domain = chenjie_nova

[update_catalog]
domain = chenjie_nova
output_dir = chenjie_nova/locale
input_file = chenjie_nova/locale/chenjie_nova.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = chenjie_nova/locale/chenjie_nova.pot


[entry_points]
chenjie_nova.cmd.api =
    interface = chenjie_nova.cmd.api:interface
    interface2 = chenjie_nova.cmd.api:interface2
console_scripts =
    chenjie-nova = chenjie_nova.cmd.api:main