[metadata]
name = chenjie_novaclient
summary = "Small version of nova client for chenjie"
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    chenjie_novaclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = chenjie_novaclient/locale
domain = chenjie_novaclient

[update_catalog]
domain = chenjie_novaclient
output_dir = chenjie_novaclient/locale
input_file = chenjie_novaclient/locale/chenjie_novaclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = chenjie_novaclient/locale/chenjie_novaclient.pot

[entry_points]
console_scripts =
    chenjie-novaclient = chenjie_novaclient.cmd.api:main